# NAKED

./: .README.md.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  RUN_NAKED.sh
Camera/: CMakeLists.txt  Camera.cpp  Camera.h  CameraNode.cpp  Device.cpp  Device.h  QRDecode.h
launch/: NAKED.launch  camera_pkg_node.launch  control.launch
map/: Makefile  Map.h  MapCoder.h  test.cpp
pathfinder/: Pathfinder.cpp  Pathfinder.h
src/camera_pkg/: CMakeLists.txt  OpenCVConfig.cmake  package.xml
src/camera_pkg/include/: Camera.h  QRDecode.h
src/camera_pkg/launch/: qr_decode.launch
src/camera_pkg/src/: camera_pkg_node.cpp
src/control/: CMakeLists.txt  package.xml
src/control/include/: control_node.h  source_node.h
src/control/launch/: NAKED.launch
src/control/src/: control_node.cpp  source_node.cpp
src/cv_bridge/: CMakeLists.txt  package.xml
src/cv_bridge/src/: .CMakeLists.txt.swp
src/drive_controller/: CMakeLists.txt  package.xml
src/drive_controller/launch/: drive_controller.launch
src/map/: CMakeLists.txt  Makefile-archive  MapCoder.h  README.md  gen_qr.cpp  qr.pgm  test.cpp
src/motion/: CMakeLists.txt  package.xml
src/motion/include/: motion_node.h
src/motion/launch/: motion.launch
src/motion/src/: motion_node.cpp
src/motion_node/: CMakeLists.txt  package.xml
src/motion_node/include/: motion_node.h
src/motion_node/src/: motion_node.cpp
src/naked/: CMakeLists.txt  package.xml
src/naked/include/: SearchManager.h  search_manager_node.h
src/naked/launch/: NAKED.launch  client.launch  server.launch
src/naked/src/: SearchManager.cpp  search_manager_node.cpp
